<resources>
    <string-array name="genero_array">
        <item>M</item>
        <item>F</item>
    </string-array>
    <string-array name="actividad_array">
        <item>Sedentario</item>
        <item>Ligero</item>
        <item>Moderado</item>
        <item>Intenso</item>
    </string-array>
    <string name="app_name" translatable="false">DrinkUp</string>
    <string name="logo_de_la_aplicaci_n" translatable="false">Logo de la aplicación</string>
    <string name="texto__login_iniciar_sesion">Iniciar Sesión</string>
    <string name="login_correo_electronico">Correo electrónico</string>
    <string name="login_contrasena">Contraseña</string>
    <string name="login_btn_iniciar_sesion">Iniciar sesión</string>
    <string name="login_btn_registrarse">¿No tienes cuenta? Regístrate</string>
    <string name="register_registrar_usuario">Registrar Usuario</string>
    <string name="register_nombre">Nombre</string>
    <string name="register_correo">Correo electrónico</string>
    <string name="register_contrasena">Contraseña</string>
    <string name="register_btn_registrarse">Registrarse</string>
    <string name="datos_ingrese_sus_datos">Ingrese sus datos</string>
    <string name="datos_edad">Edad:</string>
    <string name="datos_genero">Género</string>
    <string name="datos_peso">Peso (kg)</string>
    <string name="datos_typeactivity">Tipo de actividad física</string>
    <string name="datos_guardar_datos">Guardar Datos</string>
    <string name="home_bienvenido">¡Hola, %1$s!</string>
    <string name="home_consumo" translatable="false">500 ml</string>
    <string name="home_pleca" translatable="false">/</string>
    <string name="home_obj_diario" translatable="false">1000 ml</string>
    <string name="home_next_reminder">Próximo recordatorio en:</string>
    <string name="home_btn_registrar_consumo">Registrar consumo de agua</string>
    <string name="consumo_volver">Volver</string>
    <string name="consumo_design">Diseño</string>
    <string name="consumo_btn_registrar">Registrar</string>
    <string name="recordatorio_titulo">Recordatorios</string>
    <string name="recordatorio_agregar_recordatorio">Agregar recordatorio</string>
    <string name="itemrecordatorio_hora">Hora</string>
    <string name="itemrecordatorio_estado">Estado</string>
    <string name="itemrecordatorio_cantidad">Cantidad</string>
    <string name="itemrecordatorio_eliminar">Eliminar</string>
    <string name="recordatorio_dialogo_titulo">Agregar Recordatorio</string>
    <string name="recordatorio_dialogo_formato">Hora (Formato 24h)</string>
    <string name="recordatorio_dialogo_cantidad_ml">Cantidad (ml)</string>
    <string name="recordatorio_dialogo_2puntos" translatable="false">:</string>
    <string name="perfil_desc_img">Imagen de perfil</string>
    <string name="perfil_titulo">Perfil de usuario</string>
    <string name="perfil_nombre">Nombre</string>
    <string name="perfil_correo">Correo electrónico</string>
    <string name="perfil_edad">Edad</string>
    <string name="perfil_genero">Género</string>
    <string name="perfil_peso">Peso (kg)</string>
    <string name="perfil_actividad">Actividad física</string>
    <string name="perfil_objetivo">Objetivo diario (ml)</string>
    <string name="perfil_btn">Editar</string>
    <string name="perfil_btn_guardar">Guardar</string>
    <string name="recordatorio">Recordatorios</string>
    <string name="informaci_n">Información</string>
    <string name="inicio">Inicio\n</string>
    <string name="historial">Historial</string>
    <string name="perfil">Perfil\n</string>
    <string name="generar_grafico_en_historial">Generar gráfico</string>
    <string name="grafico_del_mes_en_activity_grafico">Gráfico del mes</string>
    <string name="agregar_nota_en_activity_resumen_dia">Agregar nota</string>
    <string name="editar_btn">Editar</string>
    <string name="frutas_hidratantes_info">Frutas hidratantes</string>
    <string name="frutas_hidratantes_img">Frutas hidratantes</string>
    <string name="texto_descripcion">Sandía, melón y naranjas son excelentes para complementar tu hidratación.</string>
    <string name="evita_bebidas_img">Evita bebidas dañinas</string>
    <string name="reduce_bebidas_perjudiciales">Reduce bebidas perjudiciales</string>
    <string name="limita_el_consumo_de_alcohol">Limita el consumo de alcohol, café y bebidas azucaradas que deshidratan.</string>
    <string name="botella_reutilizable_img">Botella reutilizable</string>
    <string name="botella_siempre_contigo">Botella siempre contigo</string>
    <string name="lleva_una_botella_reutilizable_text">Lleva una botella reutilizable para recordar hidratarte durante el día.</string>
    <string name="consejos_de_hidratacion_text">Consejos de Hidratación</string>
    <string name="bebe_agua_diariamente_img">Bebe agua diariamente</string>
    <string name="_8_vasos_diarios_text">8 vasos diarios</string>
    <string name="bebe_al_menos_8_vasos_text">Bebe al menos 8 vasos de agua al día para mantener una buena hidratación.</string>
    <string name="fecha_resumen_dia">"Fecha: "</string>
    <string name="objetivo_resumen_dia">"Objetivo: "</string>
    <string name="total_consumido_resumen_dia">"Total consumido: "</string>
    <string name="estado_resumen_dia">"Estado: "</string>
    <string name="escribe_tu_nota_aqu">Escribe tu nota aquí</string>
    <string name="agregar_nota">Agregar nota</string>
    <string name="guardar">Guardar</string>
    <string name="cancelar_resumen_dia">Cancelar</string>
    <string name="la_nota_no_vacia">La nota no puede estar vacía</string>
    <string name="editar_nota_resumen_dia">Editar nota</string>
    <string name="guardar_resumen_dia">Guardar</string>
    <string name="cancelar_resumen_dia_edit">Cancelar</string>
    <string name="la_nota_no_vacia_edit">La nota no puede estar vacía</string>
    <string name="no_iniciado">No iniciado</string>
    <string name="completado">Completado</string>
    <string name="incompleto">Incompleto</string>
    <string name="error_usuario_no_identificado_reminder">Error: Usuario no identificado</string>
    <string name="agregar_recordatorio_reminder">Agregar recordatorio</string>
    <string name="anterior_reminder">Anterior</string>
    <string name="pr_ximo__reminder">Próximo</string>
    <string name="hora_reminder">hora</string>
    <string name="cantidad_reminder">cantidad</string>
    <string name="recordatorios_reminder">Recordatorios</string>
    <string name="notificaciones_para_beber_agua_reminder">Notificaciones para beber agua</string>
    <string name="cancelar_reminder">Cancelar</string>
    <string name="guardar_reminder">Guardar</string>
    <string name="recordatorio_eliminado_correctamente">Recordatorio eliminado correctamente</string>
    <string name="no_se_pudo_eliminar_el_recordatorio">No se pudo eliminar el recordatorio</string>
    <string name="recordatorio_actualizado">Recordatorio actualizado</string>
    <string name="error_al_actualizar">Error al actualizar</string>
    <string name="elige_un_dise_o">Elige un diseño</string>
    <string name="dise_oseleccionado">diseñoSeleccionado</string>
    <string name="error_usuario_no_identificado_registrarconsumo">Error: usuario no identificado</string>
    <string name="consumo_registrado_registrarconsumo">Consumo registrado</string>
    <string name="error_al_registrar_consumo_registrarconsumo">Error al registrar consumo</string>
    <string name="l_mite_alcanzado">Límite alcanzado</string>
    <string name="la_nota_no_puede_exceder_los_r">"La nota no puede exceder los "</string>
    <string name="caracteres">" caracteres."</string>
    <string name="completa_todos_los_campos">Completa todos los campos</string>
    <string name="usuario_registrado_correctamente">Usuario registrado correctamente</string>
    <string name="error_correo_ya_registrado">Error: correo ya registrado</string>
    <string name="eliminar_recoradapter">Eliminar</string>
    <string name="deseas_eliminar_este_recordatorio">¿Deseas eliminar este recordatorio?</string>
    <string name="cancelar_recoradapter">Cancelar</string>
    <string name="si">Sí</string>
    <string name="hora_recoradapter">Hora: </string>
    <string name="estado_recoradapter">Estado: </string>
    <string name="cantidad_recoradapter">Cantidad: </string>
    <string name="completa_todos_profile">Completa todos los campos</string>
    <string name="ingresa_una_edad">Ingresa una edad válida entre 10 y 120 años</string>
    <string name="edad_debe_ser_profile">Edad debe ser un número válido</string>
    <string name="ingresa_un_peso">Ingresa un peso válido entre 30 y 500 kg</string>
    <string name="peso_debe_ser_un_n_mero_v_lido_profile">Peso debe ser un número válido</string>
    <string name="nombre_profile">nombre</string>
    <string name="edad_profile">edad</string>
    <string name="genero_profile">genero</string>
    <string name="peso_profile">peso</string>
    <string name="actividad_fisica_profile">actividad_fisica</string>
    <string name="objetivo_diario_ml_profile">objetivo_diario_ml</string>
    <string name="datos_actualizados_profile">Datos actualizados</string>
    <string name="recordatorios_para_beber_agua_noti">Recordatorios para beber agua</string>
    <string name="hora_de_beber_agua_noti">¡Hora de beber agua!</string>
    <string name="ingiere_noti">"Ingiere "</string>
    <string name="ml_programado_para_las_noti">" ml. Programado para las "</string>
    <string name="no_se_pudo_programar_la_alarma">No se pudo programar la alarma</string>
    <string name="completa_todos_los_campos_login">Por favor completa todos los campos</string>
    <string name="inicio_de_sesion">Inicio de sesión exitoso</string>
    <string name="credenciales_incorrectas">Credenciales incorrectas. Intenta nuevamente.</string>
    <string name="por_favor_completa_insert">Por favor completa todos los campos</string>
    <string name="objetivo_diario_calculado">Objetivo diario calculado</string>
    <string name="tu_objetivo_diario_recomendado_es">"Tu objetivo diario recomendado es "</string>
    <string name="ml_deseas_cambiarlo">" ml. ¿Deseas cambiarlo?"</string>
    <string name="advertencia_el_objetivo_max">ADVERTENCIA: El objetivo diario máximo recomendado es 4000 ml. Exceder esta cantidad puede ser peligroso.</string>
    <string name="aceptar_insert">Aceptar</string>
    <string name="error_al_obtener_el_usuario_insert">Error al obtener el usuario</string>
    <string name="datos_guardados_insert">Datos guardados correctamente</string>
    <string name="error_al_guardar_insert">Error al guardar los datos</string>
    <string name="cancelar_insert">Cancelar</string>
    <string name="titulo_card1_largo">8 vasos diarios - La base de la hidratación</string>
    <string name="la_recomendaci_n_de_beber_8_vasos_de_agua">La recomendación de beber 8 vasos de agua al día (aproximadamente 2 litros) es una guía general que se adapta a la mayoría de adultos sanos. Sin embargo, las necesidades exactas varían según:\n\n</string>
    <string name="peso_corporal_se_recomienda_35_ml_por_kg">• Peso corporal: Se recomienda 35 ml por kg de peso (ej. 70 kg = 2.45 litros)\n</string>
    <string name="nivel_de_actividad_a_ade_500">• Nivel de actividad: Añade 500 ml por hora de ejercicio moderado\n</string>
    <string name="clima_en_climas_c_lidos">• Clima: En climas cálidos o húmedos necesitas 1.5 veces más agua\n</string>
    <string name="embarazo_lactancia">• Embarazo/lactancia: Se añaden 300-700 ml diarios\n\n</string>
    <string name="se_ales_de_buena_hidrataci_n">Señales de buena hidratación:\n</string>
    <string name="orina_de_color_amarillo_claro">✅ Orina de color amarillo claro\n</string>
    <string name="piel_el_stica">✅ Piel elástica\n</string>
    <string name="boca_h_meda">✅ Boca húmeda\n</string>
    <string name="energ_a_constante">✅ Energía constante\n\n</string>
</resources>