<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="12dp"
    android:gravity="center_vertical"
    android:background="?android:attr/selectableItemBackground">

    <LinearLayout
        android:orientation="vertical"
        android:layout_weight="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvHora"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemrecordatorio_hora"
            android:textSize="16sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/tvEstado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemrecordatorio_estado"/>

        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemrecordatorio_cantidad" />
    </LinearLayout>

    <Button
        android:id="@+id/btnEliminar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/itemrecordatorio_eliminar"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:backgroundTint="#e74c3c"
        android:textColor="#FFFFFF" />
</LinearLayout>
