<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
   xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/myToolbar"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:background="@color/black"
    android:gravity="center"
    android:theme="@style/ThemeOverlay.AppCompat.ActionBar"

    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/icon_reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/recordatorio"
            android:paddingRight="10dp"
            android:src="@drawable/ic_reminder" />

        <ImageView
            android:id="@+id/icon_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/informaci_n"
            android:padding="10dp"
            android:src="@drawable/ic_info" />

        <ImageView
            android:id="@+id/icon_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/inicio"
            android:padding="10dp"
            android:src="@drawable/ic_home" />

        <ImageView
            android:id="@+id/icon_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/historial"
            android:padding="10dp"
            android:src="@drawable/ic_history" />

        <ImageView
            android:id="@+id/icon_profile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/perfil"
            android:padding="10dp"
            android:src="@drawable/ic_profile" />

        <ImageView
            android:id="@+id/icon_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/perfil"
            android:padding="10dp"
            android:src="@drawable/ic_profile" />

    </LinearLayout>

</androidx.appcompat.widget.Toolbar>